# devdocs-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  claude_config_example.json  docker-build.bat  docker-build.sh  docker-compose.yml  pyproject.toml  test_mcp.py  test_mcp_protocol.py
docker/: docker-compose.hybrid.yml  docker-compose.yml
scripts/: docker-build.bat  docker-build.sh
src/devdocs_mcp/: __init__.py  api.py  cache.py  hybrid.py  server.py  utils.py
tests/: __init__.py
