[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devdocs-mcp"
version = "0.1.0"
description = "MCP server for querying DevDocs API documentation browser"
authors = [
    { name = "DevDocs MCP Team" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.25.0",
    "anyio>=4.0.0",
    "typing-extensions>=4.0.0"
]

[project.scripts]
devdocs-mcp = "devdocs_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/devdocs_mcp"]

[tool.hatch.metadata]
allow-direct-references = true
allow-missing-readme = true
